@@ -31,7 +31,8 @@
 	* src/desktop.h (SP_DESKTOP_ZOOM): Define in terms of expansion()
 	function instead of implicit casting.
 
-	* src/arc-context.cpp, src/selection.cpp, src/selection.h,
+	* src/arc-context.cpp, src/document.cpp,
+	src/selection.cpp, src/selection.h,
 	src/sp-ellipse.cpp, src/sp-image.cpp, src/sp-offset.cpp,
 	src/sp-rect.cpp, src/sp-spiral.cpp, src/sp-star.cpp, src/sp-text.cpp,
 	src/bonobo/canvas-translator.cpp:
